[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configReaders"
version = "25.7.1"
description = "Helper functions for reading keys from JSON and config files"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "T. Werstlein" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["configReaders*"]